test/compile-errors/bogus-local.crow
main nat^(_ string[]) summon
	x = z
	_ = x ? 1 : 2
	()
